@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.6-1
-Date: 2015-02-27
+Date: 2015-04-04
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     email = "feinerer@logic.at"),
              person("Kurt", "Hornik", role = "aut"),
